[Video Capture Win] Enable GetPhotoState call for MediaFoundation implementation

GetPhotoState was disabled on Windows because of issue 722038. The issue
only impacts the Video Capture DirectShow implementation.

This prevents video stream from being stopped when
InitializeVideoAndCameraControls fails on DirectShow and let
GetPhotoState calls reach the MediaFoundation implementation.

Bug: 833449, 722038
Change-Id: Ifad3fa1ee86938ee62a306bbf5900bf645a5eb9f
Reviewed-on: https://chromium-review.googlesource.com/1013697
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551800}
Former-commit-id: be9d1264fb2ebfdf9ee0b1307e56aad9b456187a